run with names as unnamed